--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
       }
       render();
     }
-
+// 수정된 코드
     function shareUrl(){
-      const base = location.origin + location.pathname;
+      const base = location.origin + '/eung/index.html'; // 경로를 직접 지정
       const key = getResultFromURL();
-      return key ? \`\${base}#result=\${key}&utm_source=share\` : base;
+      return key ? `${base}#result=${key}&utm_source=share` : base;
     }
 
     // Robust share/copy without assuming Clipboard permission
